updating verce.json file
